Fix bottom navigation on narrow, fix navbar navigation active flag

--- a/css/style.scss
+++ b/css/style.scss
@@ -66,6 +66,14 @@
   min-height: 800px;
 }
 
+.navigation-button {
+  max-width: 49%;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
 pre.highlight {
   padding: 16px;
   border-radius: 5px;
